Rename files in utils directory
* Move mixins.less and variables.less out of ext.growthExperiments.Homepage.styles
* Rename ext.growthExperiments.Utils.js and ext.growthExperiments.IconUtils.js

Bug: T289012
Change-Id: I32e82f31e3eee5054200a3befc2abece27cec920

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -4,7 +4,7 @@
 // (ResourceLoader does not seem to allow expressing dependencies for style modules.)
 
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/mixins.less';
 
 .watermark {
 	display: none;
