--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/SuggestionGroupWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.mixins';
 @import 'mediawiki.ui/variables';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../utils/variables.less';
 
 .mw-ge-suggestionGroupWidget {
 	&-headerRow {
