--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables.less';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/variables.less';
+@import '../utils/mixins.less';
 @import '../../lib/ooui/wikimedia-ui-base';
 
 .mw-ge-homepage-taskTypeSelectionWidget {
