--- a/modules/ext.growthExperiments.Homepage.styles/HelpModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/HelpModule.less
@@ -1,5 +1,5 @@
 @import 'mediawiki.ui/variables';
-@import 'variables.less';
+@import '../utils/variables.less';
 
 .growthexperiments-homepage-module-help {
 	.growthexperiments-homepage-module-header-icon {
