--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.mixins';
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import 'variables.less';
-@import 'mixins.less';
+@import '../utils/variables.less';
+@import '../utils/mixins.less';
 
 .mw-ge-small-task-card {
 	display: flex;
