--- a/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/StartEditingModule.less
@@ -1,6 +1,6 @@
 
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import 'variables.less';
+@import '../utils/variables.less';
 
 @startediting-suggested-edits-background: fade( @wmui-color-accent90, 50% );
 
