--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -1,8 +1,8 @@
 @import 'mediawiki.ui/variables.less';
 @import 'mediawiki.mixins.less';
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import 'variables.less';
-@import 'mixins.less';
+@import '../utils/variables.less';
+@import '../utils/mixins.less';
 
 // The following variables are defined in HomepageHooks::lessCallback, as their
 // values vary between Minerva and Vector.
