--- a/modules/ext.growthExperiments.StructuredTask/EditModeConfirmationDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/EditModeConfirmationDialog.less
@@ -1,4 +1,4 @@
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/mixins.less';
 
 .mw-ge-edit-mode-confirmation-dialog {
 	@mobileFontSize: 16px;
