--- a/modules/ext.growthExperiments.StructuredTask/addimage/AddImageSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/AddImageSaveDialog.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../../utils/mixins.less';
 
 .mw-ge-addImageSaveDialog {
 	color: @wmui-color-base10;
