--- a/modules/ext.growthExperiments.StructuredTask/addlink/RecommendedLinkToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addlink/RecommendedLinkToolbarDialog.less
@@ -1,8 +1,8 @@
 @import 'mediawiki.ui/variables.less';
 @import 'mediawiki.mixins.less';
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../ext.growthExperiments.Homepage.styles/variables.less';
-@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../../utils/variables.less';
+@import '../../utils/mixins.less';
 
 .mw-ge-recommendedLinkToolbarDialog {
 	@iconOpacity: 0.65;
