--- a/modules/ext.growthExperiments.StructuredTask/addlink/ceRecommendedLinkAnnotation.less
+++ b/modules/ext.growthExperiments.StructuredTask/addlink/ceRecommendedLinkAnnotation.less
@@ -1,6 +1,6 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../ext.growthExperiments.Homepage.styles/mixins';
-@import '../../ext.growthExperiments.Homepage.styles/variables';
+@import '../../utils/mixins';
+@import '../../utils/variables';
 
 .ve-ce-linkAnnotation.mw-ge-recommendedLinkAnnotation {
 	// On mobile, prevent text edit menu from showing up (T281771)
