--- a/modules/ui-components/HelpPanelButton.less
+++ b/modules/ui-components/HelpPanelButton.less
@@ -1,6 +1,6 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 @import 'mediawiki.mixins';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../utils/variables.less';
 
 .mw-ge-help-panel-button {
 	// High specificity in order to win the specificity war with very strong OOUI rules
