--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -1,7 +1,7 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/variables.less';
+@import '../utils/mixins.less';
 @import '../../lib/ooui/wikimedia-ui-base';
 
 .mw-ge-help-panel-processdialog {
