--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
+@import '../utils/variables.less';
 
 .mw-ge-startediting-dialog {
 	.growthexperiments-homepage-desktop & {
