--- a/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import 'mediawiki.mixins';
-@import 'variables.less';
+@import '../utils/variables.less';
 
 .growthexperiments-homepage-module {
 	border: @colorGray12 @border-width-base @border-style-base;
