--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables.less';
 @import 'mediawiki.mixins.less';
-@import 'variables.less';
+@import '../utils/variables.less';
 
 .suggested-edits-taskexplanation-difficulty-and-time,
 .suggested-edits-taskexplanation-additional-info {
