--- a/modules/ext.growthExperiments.MentorDashboard/BaseModule.less
+++ b/modules/ext.growthExperiments.MentorDashboard/BaseModule.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/mixins.less';
 @import 'variables.less';
 
 // .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
