--- a/modules/ext.growthExperiments.MentorDashboard/MenteeOverview/MenteeOverview.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MenteeOverview/MenteeOverview.less
@@ -1,6 +1,6 @@
 @import 'mediawiki.ui/variables';
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../../utils/mixins.less';
 
 // .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
 // specific enough for browsers to prefer rules that are here.
