--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/StructuredTaskOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/StructuredTaskOnboardingContent.less
@@ -1,6 +1,6 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../ext.growthExperiments.Homepage.styles/variables.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/variables.less';
+@import '../utils/mixins.less';
 
 .structuredtask-onboarding-content {
 	@mobileFontSize: 16px;
