--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addimage/AddImageOnboardingContent.less
@@ -1,5 +1,5 @@
 @import '../../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../../ext.growthExperiments.Homepage.styles/mixins';
+@import '../../utils/mixins';
 
 .addimage-onboarding-content {
 	&-image1 {
