--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskMessageDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskMessageDialog.less
@@ -1,4 +1,4 @@
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/mixins.less';
 
 .mw-ge-structuredTaskMessageDialog {
 	.oo-ui-messageDialog-title {
