--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
@@ -1,5 +1,5 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
-@import '../ext.growthExperiments.Homepage.styles/mixins.less';
+@import '../utils/mixins.less';
 
 .ge-structuredTask-mwSaveDialog {
 	.ge-structuredTask-copyrightwarning {
