Add an image: increase horizontal space to inspector chevron icon
Bug: T300041
Change-Id: Ia04d582e82d65cd388ae82595dcc4a36dbb8f24b

--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskToolbarDialog.less
@@ -38,7 +38,7 @@
 
 	.oo-ui-window-head {
 		min-height: 44px;
-		padding: 0 0.5em;
+		padding: 0 16px;
 		display: flex;
 		align-items: center;
 		box-sizing: content-box;
@@ -46,7 +46,6 @@
 		position: relative;
 
 		.mw-ge-structuredTaskToolbarDialog-head-robot-icon {
-			margin-left: 0.5em;
 			opacity: 0.65;
 		}
 	}
