Structured task: Swap the positions of watchlist and copyright footers
Bug: T300049
Change-Id: I3fd2e8a4892eda3a936df0fca178799d487c8a63

--- a/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/StructuredTaskSaveDialog.less
@@ -17,6 +17,11 @@
 	&-watchlistCheckbox {
 		padding: 16px 0;
 		margin: 0;
-		border-top: 1px solid @wmui-color-base80;
+		border-bottom: 1px solid @wmui-color-base80;
+
+		.ve-ui-mwSaveDialog-field-wpWatchthis,
+		.ve-ui-mwSaveDialog-field-wpWatchlistExpiry {
+			margin-bottom: 0;
+		}
 	}
 }
