Suggested edits: Always show footer in FiltersDialog
* Show the loading state of ArticleCountWidget when FiltersDialog is first shown instead of hiding the entire footer so that the dialog height takes into account that of the footer
* Back up the task queue state when SuggestedEditsModule.fetchTasksAndUpdateView is resolved for the initial setup in case the dialog is opened before tasks are fetched (so that the task queue state is up to date when cancelling)

Bug: T300031
Change-Id: I027b1dfb1d8e56dbda97ce3ab472a4d8109850bf

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -44,8 +44,10 @@
 			margin-bottom: 0.5em;
 		}
 	}
+}
 
-	.oo-ui-window-foot {
+.mw-ge-filters-dialog {
+	&-footer {
 		background: @wmui-color-base100;
 	}
 }
