Mentor resources: avoid using oo-ui-* classes
Bug: T300557
Change-Id: I7b8b58c521f9986bc08ebb5640d4395d52e51e97

--- a/modules/ext.growthExperiments.MentorDashboard/Resources.less
+++ b/modules/ext.growthExperiments.MentorDashboard/Resources.less
@@ -1,15 +1,11 @@
-// .growthexperiments-mentor-dashboard-container is here only to make the resulting selector
-// specific enough for browsers to prefer rules that are here.
-.growthexperiments-mentor-dashboard-container .growthexperiments-mentor-dashboard-module-resources {
-	.growthexperiments-mentor-dashboard-module-header {
-		.growthexperiments-dashboard-module-header-icon .oo-ui-iconWidget {
-			opacity: 0.66;
-			width: 40px;
-			height: 40px;
-		}
+.growthexperiments-mentor-dashboard-module-resources {
+	.icon-references {
+		opacity: 0.66;
+		width: 40px;
+		height: 40px;
+	}
 
-		.growthexperiments-mentor-dashboard-module-header-text {
-			padding-top: 26px;
-		}
+	.growthexperiments-mentor-dashboard-module-header-text {
+		padding-top: 26px;
 	}
 }
