Mentor dashboard: Move icons from the top edge
Change-Id: I778fc7751714a22ef974b1964a8fb4cb4e96afd5

--- a/modules/ext.growthExperiments.MentorDashboard/MenteeOverview/MenteeOverview.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MenteeOverview/MenteeOverview.less
@@ -27,7 +27,7 @@
 		.growthexperiments-mentor-dashboard-module-mentee-overview-content {
 			#growthexperiments-mentor-dashboard-module-mentee-overview-info-icon {
 				position: absolute;
-				top: 0;
+				top: 10px;
 				right: 0;
 
 				.oo-ui-popupWidget-head h3 {
