--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -9,7 +9,7 @@
 
 	#growthexperiments-mentor-dashboard-module-mentor-tools-info-icon {
 		position: absolute;
-		top: 0;
+		top: 10px;
 		right: 0;
 	}
 
