Add copyright warning to Ask Help panel
* Change the CTA for submitting question from "Post" to "Publish"

Bug: T297719
Change-Id: Ie001345a8a831bb47dde0afcbb85e9883695ae93

--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -392,3 +392,13 @@
 		}
 	}
 }
+
+.mw-ge-askHelpPanel-copyright {
+	margin-top: 16px;
+	color: @wmui-color-base20;
+	.rel-font-size-and-line-height( @parentFontSize: 16px, @targetFontSize: 13px, @targetLineHeight: 19.5px );
+
+	&-desktop {
+		.rel-font-size-and-line-height( @parentFontSize: 14px, @targetFontSize: 12.4px, @targetLineHeight: 17.3px );
+	}
+}
