Newcomer tasks: revert to showing a single action to open the Suggested edits
 * Manually revert the change in I6cfe9a8897f0f8c0b9f09aa6ed056bffd669e774. This
change restores the Suggested edits mobile homepage module link but keeps the token
generation changes

Bug: T301678
Change-Id: Iaab5ff89f67a653b6f9e9ddd3acf070a8229330b

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -649,8 +649,8 @@ body.mw-special-Homepage {
 					display: block;
 					margin: 12px auto 0 auto;
 					max-width: 28.75em;
-					// OOUI button links are created in a nested element
-					& > a {
+					// OOUI button created in a span, see SuggestedEdits.php::getMobileSummaryBody()
+					& > span {
 						width: 100%;
 					}
 				}
