GLAM event: Update landing page content
* Remove benefits list
* Hide the body copy on mobile and use body copy style for the second paragraph of the title copy
* Update event name from #1pic1article to #1Picture1Article

Bug: T301097
Change-Id: Ia34b172d1cad79fbbada99183f731bb1d5c940fa

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -108,6 +108,12 @@
 
 			.mw-ge-donorsignup-title {
 				padding-top: @mobileLogoHeight;
+
+				p:last-child {
+					// HACK the title copy has two paragraphs, on mobile, the second paragraph should be in body font size
+					// This allows us to only maintain a single key for both desktop and mobile.
+					.rel-font-size-and-line-height( @parentFontSize: 24px, @targetFontSize: 16px, @targetLineHeight: 26.4px );
+				}
 			}
 		}
 	}
