Pilot: Proof of concept account creation page with video embed
To test:

* Set $wgGECampaignPattern = '/^growth-marketing-video$/';
* Enable Extension:TimedMediaHandler, set $wgTmhWebPlayer = 'mwembed';
as that is what is used on eswiki. Optionally install ffmpeg and set
$wgFFmpegLocation to its location.
* Set $wgUseInstantCommons in LocalSettings.php
* Visit Special:CreateAccount&geEnabled=1&campaign=growth-marketing-video&geNewLandingHtml=1

On mobile, we can't guess at the width of the video on the server-side, so we just set a
height and hope that it is reasonable.

Depends-On: I1ffe8669a36bfde3d9c65da5a131e2985183a8d8
Bug: T302738
Change-Id: I4dcb544bc586ff8e453c1f224f395ebb685e4136

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -93,6 +93,21 @@
 		}
 	}
 
+	&-marketingvideocampaign {
+		background-image: unset;
+		background-size: unset;
+
+		.mw-ge-donorsignup-title {
+			padding: 20px 0 0;
+		}
+
+		.skin-minerva & {
+			.mw-ge-donorsignup-title {
+				padding: 20px 0 0;
+			}
+		}
+	}
+
 	&-glamcampaign {
 		@logoHeight: 200px;
 		background-image: url( ../../images/campaign/campaign-image-glam-2022.svg );
