Add an image: fix placement of delete button
The selector for <figure> from content.media-common.less sets the width of the first span to 180px. The selector was updated from span to span:first-child so ours need to be updated as well.

Bug: T304387
Change-Id: Ife17141576687cb61d253175a58500096b4e8915

--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -100,8 +100,8 @@
 			margin-bottom: 8px;
 			justify-content: space-between;
 
-			// Override width from figure[typeof~='mw:Image/Thumb'] > *:first-child > span
-			.mw-ge-recommendedImage-deleteButton {
+			// Override width from figure[typeof~='mw:Image/Thumb'] > *:first-child > span:first-child
+			.mw-ge-recommendedImage-deleteButton:first-child {
 				width: auto;
 			}
 		}
