--- a/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
@@ -60,7 +60,7 @@ body.mw-special-Homepage {
 	.overlay-content .growthexperiments-homepage-module-mobile-overlay.growthexperiments-homepage-module-mentorship {
 		// Subtract 1em for margin-top on .overlay-content (in Homepage.less)
 		// Subtract 3em for padding-top on .overlay-content (in Minerva)
-		height: calc( 100vh ~'-' ( 1em + 3em ) );
+		height: calc( ~'100vh - ( 1em + 3em )' );
 		background-color: @colorGray15;
 		padding: 16px;
 	}
