--- a/modules/ext.growthExperiments.HomepageDiscovery/HomepageDiscovery.less
+++ b/modules/ext.growthExperiments.HomepageDiscovery/HomepageDiscovery.less
@@ -15,7 +15,7 @@
 
 	.mw-ge-homepage-discovery-house {
 		display: flex;
-		width: calc( 30% ~'-' 1.5em );
+		width: calc( ~'30% - 1.5em' );
 		margin-right: 30px;
 		height: 100px;
 		padding-top: 30px;
@@ -27,7 +27,7 @@
 		display: flex;
 		flex-direction: column;
 		text-align: left;
-		width: calc( 70% ~'-' 1.5em );
+		width: calc( ~'70% - 1.5em' );
 
 		h2 {
 			font-family: @font-family-base;
