--- a/modules/ext.growthExperiments.HomepageDiscovery/HomepageDiscoveryMobile.less
+++ b/modules/ext.growthExperiments.HomepageDiscovery/HomepageDiscoveryMobile.less
@@ -14,7 +14,7 @@
 	// for half of hamburger icon width - 11px for arrow left edge / tip distance)
 	// need a separate -left rule to not break CSSJanus
 	padding: 14px 46px;
-	padding-left: calc( 3px ~'+' 0.625em );
+	padding-left: calc( ~'3px + 0.625em' );
 	box-shadow: 0 2px 3px 0 rgba( 0, 0, 0, 0.15 );
 
 	// this is tailored to Minerva's hamburger menu so don't show it on other skins
