Newcomer tasks: wrap description text in a new line
* Make description text appear in a new line when the button group
labels leave less than a 60% of space to the text container
* Adapt font-sizes per design requirements

Bug: T301825
Change-Id: I56cbffad7b1a5405040661cd627e1130bb12e8aa

--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/MatchModeSelectWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/MatchModeSelectWidget.less
@@ -4,6 +4,7 @@
 	display: flex;
 	align-items: baseline;
 	justify-content: flex-end;
+	flex-wrap: wrap-reverse;
 
 	&--mobile {
 		align-items: flex-end;
@@ -21,5 +22,7 @@
 		color: @colorGray5;
 		padding-top: 8px;
 		text-align: right;
+		font-size: 0.9em;
+		min-width: 60%;
 	}
 }
