Newcomer tasks: use dropdown widget instead of button group
* Replace ButtonGroupWidget for DropdownWidget in MatchModeSelector
to meet designs
* Add info icon to show the help text in a popup
* Update help select options copy text
* Remove prior "onMatchModeClick" event emitted from
ButtonGroupWidget menu options. Instead emit
"toggleMatchMode" event on "choose" events from
DropdownWidget and bubble it up to needed components
* Add missing logging call in StartEditingDialog
when the match mode is changed

Bug: T305097
Change-Id: Ie2923c6ec1e6673073c73c7be9f0b4646a48c3ba

--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/MatchModeSelectWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/MatchModeSelectWidget.less
@@ -2,26 +2,25 @@
 
 .mw-ge-MatchModeSelectWidget {
 	display: flex;
-	align-items: baseline;
 	justify-content: flex-end;
-	flex-wrap: wrap-reverse;
 
-	&--mobile {
-		flex-direction: column-reverse;
-	}
-
-	&__button-group {
-		&& {
-			display: inline-flex;
-			margin-left: 8px;
+	&__dropdown {
+		// Override width: 100% from OO.ui.DropdownWidget so
+		// container width adapts to text length
+		&.oo-ui-dropdownWidget {
+			width: auto;
 		}
 	}
 
-	&__description-text {
-		color: @colorGray5;
-		padding-top: 8px;
-		text-align: right;
-		font-size: 0.9em;
-		min-width: 60%;
+	&__popup {
+		// Minerva skin hides all popups if an overlay is open.
+		// Override display to allow to show the info popup inside of TopicFiltersDialog
+		.oo-ui-popupWidget {
+			display: block;
+		}
+	}
+
+	&__info-text {
+		padding: 8px 0;
 	}
 }
