MatchModeSelectWidget: Use overlay for the popup
This allows the popup to be partially outside the dialog
container. Looks better even with perfect positioning,
but a positioning bug resulted in the overlay-less popup
sometimes overflowing the container and triggering
scrollbars, making it look especially bad.

Adjust LESS rule for task info button that hid every popup
that was in an overlay.

Also add/fix some jsdoc class names.

Follows-up Ie2923c6ec1e6673073c73c7be9f0b4646a48c3ba.

Bug: T305097
Change-Id: I331200c1d62f74a95211dbdea4c1c2bbe0fb5334

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -225,7 +225,7 @@ body.mw-special-Homepage {
 	}
 	// Hide the popup from the button widget,
 	// since the Drawer gets drawn on top of it.
-	.oo-ui-popupButtonWidget-popup {
+	.suggested-edits-task-explanation-info-button .oo-ui-popupButtonWidget-popup {
 		display: none;
 	}
 
