--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -98,7 +98,7 @@
 		background-size: unset;
 
 		.mw-ge-donorsignup-title {
-			padding: 20px 0 0;
+			padding: 20px 0 20px;
 		}
 
 		.skin-minerva & {
@@ -131,5 +131,14 @@
 				}
 			}
 		}
+	}
+}
+
+#footer-info-signupcampaign-legal {
+	color: @wmui-color-base30;
+
+	.minerva-footer & {
+		// override Minerva's display:none
+		display: inline-block;
 	}
 }
