--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -98,7 +98,7 @@
 		background-size: unset;
 
 		.mw-ge-donorsignup-title {
-			padding: 20px 0 0;
+			padding: 20px 0 20px;
 		}
 
 		.skin-minerva & {
