Add a legal notice to campaign landing pages
Bug: T303785
Change-Id: Iba63169f4abeb57eb7c2f8b43bbda9b07ab250d3

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -133,3 +133,12 @@
 		}
 	}
 }
+
+#footer-info-signupcampaign-legal {
+	color: @wmui-color-base30;
+
+	.minerva-footer & {
+		// override Minerva's display:none
+		display: inline-block;
+	}
+}
