Replace deprecated Less `.box-sizing()` mixin with standard CSS
Bug: T306488
Change-Id: Iab184b9843af0e801e22209eb9f5612914d39300

--- a/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/BaseModule.less
@@ -8,7 +8,7 @@
 	box-shadow: none;
 	color: @colorGray2;
 	padding: 16px;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 
 	&.growthexperiments-homepage-module-desktop {
 		margin: @homepageModuleMargin;
