--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -6,7 +6,7 @@
 .mw-ge-small-task-card {
 	display: flex;
 	width: 100%;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 	padding: 8px;
 	background-color: @wmui-color-base100;
 	box-shadow: 0 1px 0 0 @wmui-color-base80;
