--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -77,7 +77,7 @@
 .suggested-edits-task-explanation-wrapper {
 	padding: 16px 8px;
 	width: @cardWrapperWidth;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 
 	.suggested-edits-taskexplanation-additional-info {
 		h4 {
