--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -21,7 +21,7 @@
 		position: relative;
 		padding: 2px 4px;
 		// Counter the global border-box rule on mobile
-		.box-sizing( content-box );
+		box-sizing: content-box;
 	}
 
 	.suggested-edits-difficulty-time-estimate {
