--- a/modules/ext.growthExperiments.Account.styles/WelcomeSurvey.less
+++ b/modules/ext.growthExperiments.Account.styles/WelcomeSurvey.less
@@ -114,7 +114,7 @@
 			border: 1px solid @colorGray10;
 			text-align: center;
 			padding-top: 25px;
-			.box-sizing( border-box );
+			box-sizing: border-box;
 
 			// Put three animated dots in the placeholder box
 			&:before,
