--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -75,7 +75,7 @@
 		left: -100%;
 		right: 100%;
 		height: 100%;
-		.box-sizing( border-box );
+		box-sizing: border-box;
 
 		.mw-ge-help-panel-processdialog-activepanel-home & {
 			left: 0;
