--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
@@ -275,7 +275,7 @@
 				// image isn't counted as part of the height of this div because it's a background
 				// image. Address this by using a min-height.
 				min-height: 128px + 24px;
-				.box-sizing( border-box );
+				box-sizing: border-box;
 			}
 
 			.growthexperiments-homepage-mobile-summary &,
@@ -347,7 +347,7 @@
 					white-space: nowrap;
 					// Make sure there's always at least 1em between the two columns
 					padding-right: 1em;
-					.box-sizing( border-box );
+					box-sizing: border-box;
 				}
 			}
 
