--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -28,7 +28,7 @@
 	.image {
 		position: relative;
 		display: block;
-		min-height: 4em; // make sure the the details button doesn't cover the entire image
+		min-height: 4em; // make sure the details button doesn't cover the entire image
 		text-align: center;
 	}
 
