Suggested edits: update footer background color for LastDayEditsWidget
Bug: T308241
Change-Id: I3fe4aaa627ad1c4764214f07bcdf642e3c6dfc17

--- a/modules/ext.growthExperiments.Homepage.styles/LastDayEditsWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/LastDayEditsWidget.less
@@ -1,4 +1,5 @@
 @import 'mediawiki.ui/variables';
+@import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 
 .growthexperiments-last-day-edits-widget {
 	.suggested-edits-main {
@@ -28,7 +29,7 @@
 		// Negate the padding on .growthexperiments-homepage-module in Homepage.less
 		margin: 16px -16px -16px -16px;
 		padding: 12px 24px 12px;
-		background-color: @colorGray15;
+		background-color: @wmui-color-base100;
 		color: @colorGray5;
 		font-size: 0.8em;
 	}
