Mentorship: Use flex-end instead of vertical-align: bottom
In Firefox, the underline remains at the same level regardless of the bottom alignment.

Bug: T307752
Change-Id: I6cc044e9504d199328f21fccbd3f816821fd3e3b

--- a/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
@@ -12,8 +12,9 @@
 		}
 	}
 
-	&-username {
-		vertical-align: bottom;
+	&-userlink-link {
+		display: flex;
+		align-items: flex-end;
 	}
 
 	&-editcount,
