Campaign templates: show legal footer on mobile
* Include ext.growthExperiments.Account.styles when showing the legal
  footer (to style the footer text)
* Add mw-ge-customlandingpage class when custom landing page content is
  shown so that default rules for watermark and benefits container can
  still be applied when there is no customized content but the user is
  still in a campaign

Bug: T307521
Change-Id: Ic15eb911d305efa9784584e83e63b308ff7ffd50

--- a/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
+++ b/modules/ext.growthExperiments.Account.styles/DonorSignupCampaign.less
@@ -6,13 +6,17 @@
 @import '../lib/wikimedia-ui-base/wikimedia-ui-base.less';
 @import '../utils/mixins.less';
 
-.watermark {
-	display: none;
-}
+.mw-ge-customlandingpage {
+	.watermark {
+		display: none;
+	}
 
-// Unhide the benefit block on mobile.
-.skin-minerva .mw-ui-container .mw-createacct-benefits-container {
-	display: block;
+	// Unhide the benefit block on mobile.
+	&.skin-minerva {
+		.mw-ui-container .mw-createacct-benefits-container {
+			display: block;
+		}
+	}
 }
 
 .mw-ge-donorsignup-block {
