--- a/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
@@ -15,6 +15,7 @@
 	box-shadow: 0 1px 2px 0 rgba( 0, 0, 0, 0.25 );
 	justify-content: space-between;
 	display: flex;
+	box-sizing: border-box;
 
 	&-suggested-edits {
 		border: solid 1px @wmui-color-accent50;
@@ -25,6 +26,7 @@
 		display: flex;
 		flex-direction: column;
 		padding-right: 16px;
+		justify-content: flex-end;
 
 		&-subsubheader {
 			padding-top: 0.5em;
@@ -40,7 +42,7 @@
 
 	&-image {
 		display: flex;
-		align-items: center;
+		align-items: flex-end;
 		justify-content: center;
 
 		&-icon {
