Mentorship: Use LTR icon for Hebrew
The mentorship icon contains a question mark which should not be flipped in Hebrew.

Bug: T303224
Change-Id: Ie0259bb02da8e789766e1c6203bfcc3cb8b90d1a

--- a/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelHomeButtonWidget.less
@@ -74,6 +74,14 @@
 			color: @colorGray5;
 		}
 	}
+
+	.oo-ui-icon-mentor {
+		html:lang( he ) & {
+			// Use LTR asset for Hebrew since it contains a question mark
+			/* @noflip */
+			background-image: url( ../../images/mentor-ltr.svg );
+		}
+	}
 }
 
 .mw-ge-help-panel-processdialog {
