--- a/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
@@ -10,6 +10,14 @@
 			opacity: 0.65;
 			margin-right: 1em;
 		}
+
+		.oo-ui-icon-mentor {
+			html:lang( he ) & {
+				// Use LTR asset for Hebrew since it contains a question mark
+				/* @noflip */
+				background-image: url( ../../images/mentor-ltr.svg );
+			}
+		}
 	}
 
 	&-userlink-link {
