Add an image: Attach view image details button to .mw-ge-recommendedImage-imageWrapper
Add a custom class so that upstream class changes do not break the UI
(until 1.38.0-wmf.25, the <a> in ve.ce.MWBlockImageNode has .image
class and we were attaching the details button to .image)

Bug: T309152
Change-Id: I851c57fd8e7eed0c84bf176c13eefbd716d14ed8

--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -25,7 +25,7 @@
 		}
 	}
 
-	.image {
+	&-imageWrapper {
 		position: relative;
 		display: block;
 		min-height: 4em; // make sure the details button doesn't cover the entire image
