Mentorship: Use LTR icon for Hebrew in mentorship-optin module
Bug: T309749
Change-Id: Ic63293bf01bdeabe599ebe74767ac7a524923fa5

--- a/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
@@ -1,6 +1,7 @@
 @import 'mediawiki.ui/variables';
 
-.growthexperiments-homepage-mentorship {
+.growthexperiments-homepage-mentorship,
+.growthexperiments-homepage-module-mentorship-optin {
 	&-userlink {
 		font-size: 1.2em;
 
@@ -10,7 +11,10 @@
 			opacity: 0.65;
 			margin-right: 1em;
 		}
+	}
 
+	&-userlink,
+	#mw-ge-homepage-mentorship-optin {
 		.oo-ui-icon-mentor {
 			html:lang( he ) & {
 				// Use LTR asset for Hebrew since it contains a question mark
