NewImpact: Set up ResourceLoader module and Vue scaffolding
Bug: T311299
Change-Id: Ib3ca72a9cf3b1df5c25a945dcce4d18b99c7c88b

--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -88,6 +88,10 @@
 	}
 }
 
+.client-js .growthexperiments-homepage-new-impact-no-js-fallback {
+	display: none;
+}
+
 body.mw-special-Homepage {
 	&.growthexperiments-homepage-mobile-summary {
 		// Enforce a minimum width to avoid breaking the connecting lines of the start modules.
