Mentorship module: UI/style fixes
This patch addresses issues raised in T292627#8042882,
namely:

    * removes grey area from top part of the module
    * adds missing "We've assigned you an experienced..." text
      to mobile summary
    * adds 16px padding below the preintro text
    * adds paragraph breaks in about mentors dialog

Bug: T292627
Change-Id: I9e3bcd867e053f31f609188f00d89d9411dd098a

--- a/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/MentorshipModule.less
@@ -49,6 +49,10 @@
 .growthexperiments-homepage-module-mobile-summary,
 .growthexperiments-homepage-module-mobile-overlay {
 	.growthexperiments-homepage-mentorship {
+		&-about {
+			padding-bottom: 16px;
+		}
+
 		&-intro {
 			font-size: 1.1em;
 			line-height: 1.65;
@@ -56,7 +60,7 @@
 			margin: 8px;
 			padding: 8px 16px;
 			background-color: @colorBaseInverted;
-			box-shadow: 0 -1em 0 88px @colorBaseInverted;
+			box-shadow: 0 -4em 0 128px @colorBaseInverted;
 		}
 
 		&-username {
@@ -80,6 +84,15 @@ body.mw-special-Homepage {
 
 	.growthexperiments-homepage-mentorship-about-mentorship {
 		line-height: 1.6;
+
+		h4:not( :first-child ) {
+			padding-top: 16px;
+		}
+
+		h4,
+		p {
+			padding-bottom: 8px;
+		}
 	}
 }
 
