Mentor dashboard: remove mentee table caption
As per comments in T311393#8040503 and team consensus
the caption is removed for mentee overview table.
However the component data-table will still have a
'caption-text' prop in case it's needed in a different
scenario.
The vertical padding has also been adapted as per comment
in T311393#8040947.

Bug: T311393
Change-Id: Id0598cfd98a642e2cfff771556d8df6b99a3cd4a

--- a/modules/ext.growthExperiments.MentorDashboard.Vue/components/variables.less
+++ b/modules/ext.growthExperiments.MentorDashboard.Vue/components/variables.less
@@ -12,6 +12,9 @@
 @color-accessory: @colorGray600;
 @background-color-base: @colorBase100;
 
+// Spacing
+@spacing-small: 0.5em;
+
 // Padding
 @padding-horizontal-base: 12px;
 @padding-vertical-base: 4px;
